@@ -1,7 +1,7 @@
 package es.tid.cosmos.mobility.parsing;
 
-import static java.util.Arrays.asList;
 import java.io.IOException;
+import static java.util.Arrays.asList;
 import java.util.List;
 
 import com.twitter.elephantbird.mapreduce.io.ProtobufWritable;
@@ -19,36 +19,36 @@ import es.tid.cosmos.mobility.data.MobProtocol.MobData;
  *
  * @author dmicol
  */
-public class ParseCdrsReducerTest {
+public class BorrarGetBtsComareaReducerTest {
     private ReduceDriver<LongWritable, Text, LongWritable,
             ProtobufWritable<MobData>> driver;
     
     @Before
     public void setUp() {
         this.driver = new ReduceDriver<LongWritable, Text, LongWritable,
-                ProtobufWritable<MobData>>(new ParseCdrsReducer());
+                ProtobufWritable<MobData>>(new BorrarGetBtsComareaReducer());
     }
 
     @Test
     public void testValidLine() throws IOException {
-        List<Pair<LongWritable, ProtobufWritable<MobData>>> res = this.driver
-                .withInput(new LongWritable(1L),
-                           asList(new Text("33F430521676F4|2221436242|"
-                                  + "33F430521676F4|0442224173253|2|"
-                                  + "01/01/2010|02:00:01|2891|RMITERR")))
-                .run();
+        List<Pair<LongWritable, ProtobufWritable<MobData>>> res =
+                this.driver
+                        .withInput(new LongWritable(1L),
+                                   asList(new Text("17360  17360 711.86 6673")))
+                        .run();
         assertEquals(1, res.size());
-        assertEquals(new LongWritable(2221436242L), res.get(0).getFirst());
-        ProtobufWritable<MobData> wrappedCdr = res.get(0).getSecond();
-        wrappedCdr.setConverter(MobData.class);
-        assertNotNull(wrappedCdr.get().getCdr());
+        LongWritable key = res.get(0).getFirst();
+        assertEquals(17360L, key.get());
+        ProtobufWritable<MobData> wrappedBts = res.get(0).getSecond();
+        wrappedBts.setConverter(MobData.class);
+        assertNotNull(wrappedBts.get().getBts());
     }
 
     @Test
     public void testInvalidLine() throws IOException {
         this.driver
                 .withInput(new LongWritable(1L),
-                           asList(new Text("33F430521676F4|blah blah|43242")))
+                           asList(new Text("17360  17360 711.86 blah")))
                 .runTest();
     }
 }
